--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     font-family: 'Heebo', sans-serif;
     transition: all ease 0.5s;
+    background: rgb(99, 172, 88);
 }
 
 .backgroundGradient {
