--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@
     padding: 0;
     font-family: 'Heebo', sans-serif;
     transition: all ease 0.5s;
-    background: rgb(99, 172, 88);
+}
+
+body {
+  background: rgb(99, 172, 88);
 }
 
 .backgroundGradient {
